fix: correct image file extensions to lowercase

--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@
   <!-- ✅ UNIFIED HEADER WITH LOGO -->
   <header>
     <a href="index.html" class="logo">
-      <img src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.PNG" alt="Lotus Green Future Logo" class="logo-img">
+      <img src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.png" alt="Lotus Green Future Logo" class="logo-img">
       <h1>Lotus Green Future</h1>
     </a>
     <nav>
@@ -318,7 +318,7 @@
   </section>
 
   <div class="image-section">
-    <img src="assets/images/IMG-20251209-WA0023.JPG" alt="Our team in action">
+    <img src="assets/images/IMG-20251209-WA0023.jpg" alt="Our team in action">
     <div class="content">
       <h3>From Vision to Reality</h3>
       <p>What started as a campus sustainability project in Lagos has grown into a trusted partner for homes, schools, and businesses.</p>
@@ -326,7 +326,7 @@
   </div>
 
   <div class="image-section" style="flex-direction: row-reverse;">
-    <img src="assets/images/IMG-20251209-WA0026.JPG" alt="Smart bins and community">
+    <img src="assets/images/IMG-20251209-WA0026.jpg" alt="Smart bins and community">
     <div class="content">
       <h3>Impact That Lasts</h3>
       <p>Every subscription funds local recycling education and plastic upcycling initiatives.</p>
@@ -343,12 +343,12 @@
         <small>Founder & CEO</small>
       </div>
       <div class="team-member">
-        <img src="assets/images/download-removebg-preview.PNG" alt="CJ">
+        <img src="assets/images/download-removebg-preview.png" alt="CJ">
         <h4>CJ</h4>
         <small>Logistics Lead</small>
       </div>
       <div class="team-member">
-        <img src="assets/images/images.JPG" alt="Eco Squad">
+        <img src="assets/images/images.jpg" alt="Eco Squad">
         <h4>Eco Squad</h4>
         <small>Field Operations</small>
       </div>
@@ -361,7 +361,7 @@
     <!-- Brand + Logo -->
     <div class="footer-brand">
       <img 
-        src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.PNG" 
+        src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.png" 
         alt="Lotus Green Future Logo" 
         class="logo-unified"
       />
