--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
   <!-- ✅ UNIFIED HEADER WITH LOGO -->
   <header>
     <a href="index.html" class="logo">
-      <img src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.PNG" alt="Lotus Green Future Logo" class="logo-img">
+      <img src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.png" alt="Lotus Green Future Logo" class="logo-img">
       <h1>Lotus Green Future</h1>
     </a>
     <nav>
@@ -576,7 +576,7 @@
     <!-- Brand + Logo -->
     <div class="footer-brand">
       <img 
-        src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.PNG" 
+        src="assets/images/Medicalwp-Medical-Health-Sign-blue.256.png" 
         alt="Lotus Green Future Logo" 
         class="logo-unified"
       />
